--- a/src/app/data-grid-demo/data-grid-demo.component.html
+++ b/src/app/data-grid-demo/data-grid-demo.component.html
@@ -30,3 +30,8 @@
                            isSortable="true"
                            filter="boolean"></core-data-grid-column>
 </core-data-grid>
+<div class="row">
+    <div class="col">
+        <button class="btn btn-warning" (click)="reset()">Reset</button>
+    </div>
+</div>
