--- a/src/app/data-grid-demo/data-grid-demo.component.html
+++ b/src/app/data-grid-demo/data-grid-demo.component.html
@@ -1,33 +1,33 @@
 <core-data-grid (onInit)="getData($event)" [pageSize]="5" [pageSizes]="[5, 10, 25, 50]">
     <core-data-grid-column headerName="First Name"
                            bind="firstName"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="contains"></core-data-grid-column>
     <core-data-grid-column headerName="Last Name"
                            bind="lastName"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="contains"></core-data-grid-column>
     <core-data-grid-column headerName="Email"
                            bind="email"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="startsWith"></core-data-grid-column>
     <core-data-grid-column headerName="Phone"
                            bind="phone"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="contains"></core-data-grid-column>
     <core-data-grid-column headerName="Rate"
                            bind="rate"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="numberRange"
                            currencyFormat="USD"></core-data-grid-column>
     <core-data-grid-column headerName="Created On"
                            bind="createdOn"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="dateRange"
                            dateFormat="MM/dd/yyyy"></core-data-grid-column>
     <core-data-grid-column headerName="Active?"
                            bind="isActive"
-                           isSortable="true"
+                           [isSortable]="true"
                            filter="boolean"></core-data-grid-column>
 </core-data-grid>
 <div class="row">
