Eliminate control status

--- a/src/app/core-ui/core-panel/core-panel.component.html
+++ b/src/app/core-ui/core-panel/core-panel.component.html
@@ -1,4 +1,4 @@
-<div class="card core-panel" [ngClass]="_panelOutlineClass">
+<div class="card core-panel" [ngClass]="_outlineClass">
     <div class="card-header" [ngClass]="_headerClass">
         <span *ngIf="iconClass" class="title-icon {{iconClass}}"></span>{{title}}
     </div>
