Support simple routes

--- a/src/app/core-ui/core-data-grid/core-data-grid.component.html
+++ b/src/app/core-ui/core-data-grid/core-data-grid.component.html
@@ -76,7 +76,7 @@
 </table>
 <div class="row">
     <div class="col">
-        <ngb-pagination *ngIf="data && pageSize !== null"
+        <ngb-pagination *ngIf="data && pageSize !== null && data.length > pageSize"
                         [ellipses]="true"
                         [maxSize]="10"
                         [boundaryLinks]="true"
